fixed header mobile nav scss - added intro wrapper and styled intro again - reduced margin top of every section

--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -319,6 +319,10 @@ textarea::placeholder {
 }
 
 @media (max-width: $breakpoint-md) {
+  .contact-section {
+    margin-top: 60px;
+  }
+
   .contact-form-section {
     padding: 0px $padding-medium;
   }
