--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -179,6 +179,7 @@
 @media (max-width: $breakpoint-md) {
   .testimonial-container {
     padding: 12px $padding-medium;
+    margin-top: 60px;
   }
 
   .quote-container {
