--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -101,36 +101,33 @@ header {
   // Mobile-Navigation
   .mobile-menu {
     display: none;
-    position: absolute;
-    top: 124px;
+    position: fixed; 
+    top: 124px; 
     left: 0;
     width: 100vw;
-    height: calc(100vh - 127px);
+    height: calc(100vh - 124px); 
     background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
-
+    z-index: 1000; 
+    overflow: hidden;
+    
     a {
       color: $color-light;
       text-decoration: none;
       font-size: $font-size-lg;
       padding: 15px 0;
     }
-
+  
     &.open {
       display: flex;
-      flex-direction: column;
-      align-content: center;
-      justify-content: center;
-      align-items: center;
     }
-
+  
     @media (min-width: 1201px) {
       display: none;
     }
-  }
+  }  
 
   // Mobile-Icon anzeigen bei kleineren Bildschirmen
   @media (max-width: $breakpoint-lg) {
