--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -197,6 +197,7 @@ h3 {
 @media (max-width: $breakpoint-md) {
   .portfolio-section {
     gap: 24px;
+    margin-top: 60px;
   }
 
   .portfolio-head > h2 {
