optimised imprint and privacy policy for larger screens - scss

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,6 @@
 <div class="imprint-section">
   <div class="imprint-wrapper">
-    <h2>{{ translationService.translate('IMPRINT.TITLE') }}</h2>
+    <h2 class="title">{{ translationService.translate('IMPRINT.TITLE') }}</h2>
     <div [innerHTML]="translationService.translate('IMPRINT.CONTENT')"></div>
     <h3>
       <a routerLink="/">{{ translationService.translate('IMPRINT.HOME_LINK') }}</a>
