--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <div class="privacy-policy-section">
   <div class="privacy-policy-wrapper">
-    <h2>{{ translationService.translate('PRIVACY_POLICY.TITLE') }}</h2>
+    <h2 class="title">{{ translationService.translate('PRIVACY_POLICY.TITLE') }}</h2>
     <div [innerHTML]="translationService.translate('PRIVACY_POLICY.CONTENT')"></div>
     <h3>
       <a routerLink="/">{{ translationService.translate('PRIVACY_POLICY.HOME_LINK') }}</a>
