--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   color: $color-light;
   font-family: $font-primary;
+  max-width: 1920px;
 
   h2 {
     font-size: $font-size-xxl;
@@ -14,6 +15,12 @@
   h2 {
     font-size: $font-size-m;
     margin-top: 20px;
+  }
+
+  h2.title {
+    font-size: 28px;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
   }
 
   h3 a {
@@ -27,6 +34,7 @@
 
   p {
     line-height: 1.6;
+    margin-block-end: 0.1em;
   }
 
   a {
@@ -56,5 +64,11 @@
     h2 {
       font-size: $font-size-xl;
     }
+  }
+}
+
+@media (min-width: 1921px) {
+  .imprint-wrapper {
+    padding: 0 0 100px 0;
   }
 }
