--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -443,7 +443,6 @@
   }
 }
 
-/* Baseline ab 1921px ohne obere Begrenzung */
 @media (min-width: 1921px) {
   .intro-section {
     max-width: 1920px;
@@ -461,7 +460,7 @@
       "element2 element2";
     grid-template-columns: 50% 50%;
     grid-template-rows: 70% 30%;
-    height: 100vh;
+    height: 70vh;
   }
 
   .intro-element4,
@@ -478,7 +477,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100vw;
-    top: 10%;
+    top: 0%;
 
     img {
       width: 100%;
@@ -486,26 +485,26 @@
       object-fit: cover;
     }
   }
+
+  .scroll-indicator {
+    padding: 0;
+  }
 }
 
-/* Ab 2560px - Nur Änderungen gegenüber der Baseline */
 @media (min-width: 2560px) {
-  .intro-wrapper {
-    grid-template-rows: 65% 35%;
+  .intro-element2 {
+    top: -5%;
   }
-
-  // .intro-element2 {
-  //   top: -1020px;
-  // }
 }
 
-/* Ab 3440px - Nur Änderungen gegenüber der vorigen Stufe */
-@media (min-width: 3430px) {
-  .intro-wrapper {
-    grid-template-rows: 60% 40%;
+@media (min-width: 3060px) {
+  .intro-element2 {
+    top: -12%;
   }
+}
 
-  // .intro-element2 {
-  //   top: -1200px;
-  // }
+@media (min-width: 3430px) {
+  .intro-element2 {
+    top: -20%;
+  }
 }
