--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,8 +35,7 @@
       <nav class="mobile-menu" [class.open]="isMenuOpen">
         <a (click)="navigateToSectionAndCloseMenu('about-me')">{{ translationService.translate('HEADER.ABOUT_ME') }}</a>
         <a (click)="navigateToSectionAndCloseMenu('skills')">{{ translationService.translate('HEADER.SKILLS') }}</a>
-        <a (click)="navigateToSectionAndCloseMenu('portfolio')">{{ translationService.translate('HEADER.PORTFOLIO')
-          }}</a>
+        <a (click)="navigateToSectionAndCloseMenu('portfolio')">{{ translationService.translate('HEADER.PORTFOLIO') }}</a>
         <a (click)="navigateToSectionAndCloseMenu('contact')">{{ translationService.translate('HEADER.CONTACT') }}</a>
       </nav>
     </div>
