--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="skills-section anchor-padding" id="skills">
+<div class="skills-section" id="skills">
   <div class="skills-left">
     <div class="skills-line d-none"></div>
     <h2 class="d-none">{{ translationService.translate('SKILLS.TITLE') }}</h2>
