got a problem with position absolute of background-images and background-images in generel

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -30,6 +30,6 @@
             [alt]="translationService.translate('ABOUT_ME.PORTRAIT_ALT')">
     </div>
 </div>
-<div class="background-image">
+<!-- <div class="background-image">
     <img src="../../assets/red_shade_01.png" alt="">
-</div>
+</div> -->
