--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -19,9 +19,10 @@
   right: -200px;
   width: 472px;
   height: auto;
-  z-index: 2;
+  z-index: -1;
   opacity: 0.7;
   pointer-events: none;
+  overflow: hidden;
 }
 
 
