--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -36,4 +36,4 @@
 </div>
 <!-- <div class="background-image">
     <img src="../../assets/green_shade_02.png" alt="">
-</div> -->
+</div> was tuun? --> 
