changed email within intro component to new mail

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -48,7 +48,7 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
                     <img src="../../assets/intro-icon-github.png" [alt]="translationService.translate('INTRO.GITHUB_ALT')">
                 </a>
-                <a href="mailto:gloria.schaffarczyk@gmail.com">
+                <a href="mailto:mail@gloria-schaffarczyk.de">
                     <img src="../../assets/intro-icon-email.png" [alt]="translationService.translate('INTRO.EMAIL_ALT')">
                 </a>
                 <a target="_blank" rel="noopener noreferrer"
@@ -57,7 +57,7 @@
                         [alt]="translationService.translate('INTRO.LINKEDIN_ALT')">
                 </a>
                 <span class="mailto-long">
-                    <a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a>
+                    <a href="mailto:mail@gloria-schaffarczyk.de">mail&#64;gloria-schaffarczyk.de</a>
                 </span>
             </div>
         </div>
