changed mail within footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
                     <img src="../../assets/intro-icon-github.png" alt="GitHub logo linking to Gloria's GitHub profile">
                 </a>
-                <a href="mailto:gloria.schaffarczyk@gmail.com">
+                <a href="mailto:mail@gloria-schaffarczyk.de">
                     <img src="../../assets/intro-icon-email.png" alt="Envelope icon for contacting Gloria via email">
                 </a>
                 <a target="_blank" rel="noopener noreferrer"
